syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Atividade04.BFF.Protos.Services";

service ProposalsService {
    rpc ConsultarProposals(ProposalsConsultaQuery) returns (ProposalsQueryResponse);
}

message ProposalsConsultaQuery {
    string cnpj_loja = 1;
    string usuario_lojista = 2;
}
 
message ProposalsResponse {
    string id = 1;
    string cpf = 2;
    string nome = 3;
    int32 product = 4;
    int32 status = 5;
    google.protobuf.Timestamp ultima_atualizacao = 6;
}

message ProposalsQueryResponse {
    repeated ProposalsResponse proposals = 1;
}